fix(metadata): improve image URL validation and improve HTTP connection handling in EPUB metadata writer again